--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -292,7 +292,8 @@ aside {
 .form--input:disabled {
     -webkit-color: #929292;
     color: #929292;
-    background-color: #E2E2E2;    
+    background-color: #E2E2E2;  
+    border: 1.5px solid #9e9e9e; 
 }
 
 ::placeholder {
@@ -305,7 +306,7 @@ aside {
 }
 
 .form--input:disabled::placeholder {
-    color: #606874;
+    color: #707479;
 }
 
 .form--input:hover:enabled {
@@ -331,11 +332,11 @@ aside {
     color: black;
 }
 
-.form--button ion-icon {
+/*.form--button ion-icon {
     padding-top: 3px;
     color: white;
     font-size: 40px;
-}
+}*/
 
 .dropdown-btn {
     background: rgba(0, 0, 0, 0);
@@ -354,8 +355,8 @@ aside {
     height: 80px;
     display: flex;
     flex-direction: column;
-    margin-left: 15px;
-    margin-top: 25px;
+    margin-left: 17px;
+    margin-top: 15px;
     margin-bottom: 0px;
 }
 
@@ -373,18 +374,17 @@ aside {
 }
 
 .form--button {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    height: 52px;
-    width: 52px;
-    border-radius: 50%;
-    margin: 8px;
-    margin-left: 10px;
-    -webkit-background-color: #CBDAEF;
-    background-color: #5D769A;
+    grid-row-start: 3;
+    grid-column-start: 2;
+    height: 50px;
+    width: 250px;
+    border-radius: 20px;
+    margin: 10px;
+    margin-top: -20px;
+    background-color: #CBDAEF;
     font-weight: bold;
     font-size: 16px;
-    border: 2.5px solid #445770;
+    border: 1.5px solid #395174;
     box-shadow: 0 1.5px #7b7979;
 }
 
@@ -403,6 +403,8 @@ aside {
     background-color: #E2E2E2;
     -webkit-color:gray;
     color: gray;
+    border: 1.5px solid #9e9e9e; 
+    box-shadow: 0 0px #7b7979;
 }
 
 
@@ -410,7 +412,7 @@ aside {
     display: grid;
     margin-top: 20px;
     margin-bottom: 15px;
-    justify-content: start;
+    justify-content: center;
 }
 
 .diagnosis-menu {
@@ -647,7 +649,7 @@ aside {
 }
 
 .btn-calculate:hover:enabled {
-    background-color: #d6d5d5;
+    background-color: #f3f3f3;
     color: #395174;
 }
 
@@ -1026,7 +1028,6 @@ aside {
         padding-left: 15px;
         justify-content: center;
         font-size: 20px;
-        margin-top: 10px;
         border-radius: 0px 0px 20px 20px;
     } .info-description {
         font-size: 15px;
@@ -1068,6 +1069,7 @@ aside {
         height: 70px;
         margin-right: 40px;
         margin-top: 20px;
+        margin-bottom: 30px;
     } .treatment-container {
         margin-top: 25px;
     } .treatment-header > h2 {
@@ -1155,7 +1157,7 @@ aside {
         font-size: 18px;
     } .dropdown-content {
         width: 280px;
-        margin-left: -1.5px;
+        margin-left: -1.0px;
         margin-top: -5px;
     } .dropdown-btn {
         margin-top: 0px;
@@ -1185,18 +1187,19 @@ aside {
         height: auto;
         flex-direction: column;
         align-self: flex-start;
-    } .pen-icon  {
+    } .treatment-extra :first-child {
+        align-self: flex-end;
+    }.pen-icon  {
         margin-left: -15px;
     } .description-container {
         align-self: flex-start;
         width: 100%;
-    } .treatment-calculations {
-        margin-top: 10px;
-    } .pill-icon {
+    }  .pill-icon {
         margin-left: -10px;
     } .btn-calculate {
         border: 1.5px solid #395174;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
+        margin-right: 15px;
     } 
 }
 
@@ -1234,6 +1237,11 @@ aside {
         width: 600px;
     } .recipe-container {
         width: 600px;
+    } .btn-calculate {
+        margin-left: 0px;
+        margin-right: 20px;
+    } .dropdown-content {
+        margin-left: -1.0px;
     }
 }
 
@@ -1297,7 +1305,7 @@ aside {
     } .mobile-container {
         display: none;
     } aside {
-        background-color: #f3f5fc;
+        background-color: #FBFBFB;
         z-index: -1;
         height: 100%;
         display: flex;
