--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -132,7 +132,8 @@ main {
 
 section {
     background-color: transparent;
-    max-height: 180px;
+    max-height: 350px;
+    height: 100%;
     margin-top: 10px;
 }
 
@@ -414,7 +415,7 @@ aside {
 .diagnosis-form {
     display: grid;
     margin-top: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     justify-content: center;
 }
 
@@ -1032,7 +1033,7 @@ aside {
         max-width: 100%;
     } section {
         margin-bottom: 1px;
-        max-height: 250px;
+        max-height: 450px;
     }  aside {
         grid-column-start: 1;
         grid-row-start: 14;
@@ -1075,7 +1076,7 @@ aside {
         color: black; 
     } .diagnosis-menu {
         height: 55px;
-        margin-top: 20px;
+        margin-top: 70px;
         padding-top: 15px;
         padding-bottom: 15px;
         width: 100%;
@@ -1257,7 +1258,7 @@ aside {
         padding-left: 10px;
     } .diagnosis-form {
         max-width: 100%;
-        margin-top: 30px;
+        margin-top: 35px;
         justify-content: start;
     } .weight-input {
         padding-right: 0px;
