--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -515,6 +515,8 @@ aside {
     align-self: center;
     font-style: normal;
     font-weight: 900;
+    font-size: 23px;
+    margin-top: 4px;
 }
 
 .treatment-icon-container {
@@ -726,10 +728,10 @@ aside {
 }
 
 .recipe-container h3 {
-    margin-top: 6px;
+    margin-top: 3px;
     margin-left: 23px;
     align-self: flex-start;
-    font-size: 17px;
+    font-size: 18px;
     padding: 10px 10px 5px 10px;
 }
 
@@ -866,7 +868,8 @@ aside {
 .info-active {
     color: #556b8b;
     -webkit-text-fill-color: #556b8b;
-    text-decoration: underline;
+    text-decoration-line: underline;
+    -webkit-text-decoration-line: underline;
     text-decoration-color: #5D769A;
     -webkit-text-decoration-color: #5D769A;
     text-decoration-thickness: 3px;
@@ -1049,6 +1052,7 @@ aside {
         margin-top: 30px;
         font-family: Arial, Helvetica, sans-serif;
         margin-left: 15px;
+        color: #262C30;
     }  .strepto-info {
         width: 100%;
         max-width: 558px;
@@ -1134,12 +1138,8 @@ aside {
         flex-direction: column;
         align-items: center;
     } .info-links {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
         align-self: flex-start;
-        font-family: Arial, Helvetica, sans-serif;
-        margin-left: 15px;
+        margin-left: 10px;
     } .info-links > * {
         font-family: Arial, Helvetica, sans-serif;
         margin-bottom: 12px;
@@ -1150,11 +1150,7 @@ aside {
     } .info-active {
         font-family: Arial, Helvetica, sans-serif;
         font-weight: bold;
-    } .info-container h3 {
-        margin-top: 0px;
-        margin-bottom: 30px;
-        font-family: Arial, Helvetica, sans-serif;
-    } .info-links :last-child {
+    }  .info-links :last-child {
         margin-bottom: 70px;
     } .mobile-nav {
         right: -10px;
@@ -1316,8 +1312,9 @@ aside {
         font-weight: bold;
     } .info-container h3 {
         align-self: flex-start;
-        margin-top: 35px;
         margin-bottom: 30px;
+        margin-top: 10px;
+        margin-left: 10px;
         font-family: Arial, Helvetica, sans-serif;
     } .info-container > h2 {
         align-self: center;
