--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -1017,10 +1017,10 @@ aside {
     display: flex;
     left: 50%;
     bottom: 29px;
-    background-color: rgb(186, 194, 238);
+    background-color: rgb(186 201 238);
     transform: translateX(-50%);
     width: 100%;
-    height: 100px;
+    height: 90px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     justify-content: center;
@@ -1035,6 +1035,7 @@ aside {
     margin-right: 10px;
     height: 30px;
     width: 120px;
+    min-width: 120px;
     align-self: center;
     background-color: #dee8f5;
     font-weight: bold;
@@ -1266,6 +1267,16 @@ aside {
     } .loading {
         align-self: center;
         top: 400px;
+    } .cookie {
+        height: 160px;
+        flex-direction: column;
+        bottom: 200px;
+    } .cookie > p {
+        margin-bottom: 15px;
+        padding-right: 10px;
+    } .cookie-accept-btn {
+        height: 40px;
+        width: 140px;
     } 
 }
 
@@ -1308,7 +1319,7 @@ aside {
     } .loading {
         top: 400px;
         align-self: center;
-    }
+    } 
 }
 
 @media only screen and (min-width: 720px){
@@ -1325,7 +1336,11 @@ aside {
     } .loading {
         top: 400px;
         align-self: center;
-    }
+    } .cookie > p { 
+        margin-left: 60px;
+    }  .cookie-accept-btn {
+        margin-right: 60px;
+    }  
 }
 
 @media only screen and (max-width: 850px) {
