--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -1023,16 +1023,16 @@ aside {
 .cookie {
     position: fixed;
     display: flex;
-    left: 50%;
-    bottom: 29px;
+    left: 0;
+    bottom: 0;
     background-color: rgb(186 201 238);
-    transform: translateX(-50%);
     width: 100%;
     height: 90px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 29px;
 }
 
 .cookie > p > a {
@@ -1056,6 +1056,7 @@ aside {
 .cookie > p {
     padding-left: 20px;
     padding-right: 30px;
+    color: black
 }
   
 
@@ -1278,7 +1279,7 @@ aside {
     } .cookie {
         height: 160px;
         flex-direction: column;
-        bottom: 200px;
+        margin-bottom: 0px;
     } .cookie > p {
         margin-bottom: 15px;
         padding-right: 10px;
