--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -1060,6 +1060,21 @@ aside {
     color: black
 }
 
+.penicillin-info {
+    position: fixed;
+    display: flex;
+    left: 0;
+    bottom: 0;
+    background-color: rgb(248, 247, 160);
+    width: 100%;
+    height: 90px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
 /*Scalability to mobile screen*/
 @media only screen and (max-width: 630px) {
     main {
