--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -334,7 +334,6 @@ aside {
     display: flex;
 }
 
-
 .dropdown-btn {
     background: rgba(0, 0, 0, 0);
     border: none;
@@ -1065,14 +1064,22 @@ aside {
     display: flex;
     left: 0;
     bottom: 0;
-    background-color: rgb(248, 247, 160);
+    background-color: rgb(250, 245, 178);
     width: 100%;
-    height: 90px;
+    height: 100%;
+    max-height: 100px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     justify-content: center;
     align-items: center;
     z-index: 1;
+}
+
+.penicillin-info > p {
+    padding-left: 20%;
+    padding-right: 20%;
+    color: black;
+    font-size: 18px;
 }
 
 /*Scalability to mobile screen*/
@@ -1289,6 +1296,10 @@ aside {
         width: 140px;
     } .heart-icon {
         right: 225px;
+    } .penicillin-info {
+        max-height: 180px
+    } .penicillin-info > p {
+        font-size: 17px;
     }
 }
 
@@ -1343,7 +1354,7 @@ aside {
         margin-left: 60px;
     }  .cookie-accept-btn {
         margin-right: 60px;
-    }  
+    } 
 }
 
 @media only screen and (max-width: 850px) {
@@ -1370,7 +1381,9 @@ aside {
         font-family: Arial, Helvetica, sans-serif;
     } .loading {
         top: 400px;
-    } 
+    } .penicillin-info {
+        max-height: 180px;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -1378,10 +1391,13 @@ aside {
         background-color: white;
     } .info-container {
         width: 100%;
+    } .penicillin-info > p {
+        padding-left: 5%;
+        padding-right: 5%;
     }
 }
 
-@media only screen and (min-width: 1500px) {
+@media only screen and (min-width: 1400px) {
     main {
         display: grid;
         align-items: start;
