--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -1064,10 +1064,10 @@ aside {
     display: flex;
     left: 0;
     bottom: 0;
-    background-color: rgb(250, 245, 178);
+    background-color: rgb(255, 254, 189);
     width: 100%;
     height: 100%;
-    max-height: 100px;
+    max-height: 90px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     justify-content: center;
@@ -1076,10 +1076,38 @@ aside {
 }
 
 .penicillin-info > p {
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 15%;
+    padding-right: 3%;
     color: black;
     font-size: 18px;
+}
+
+.penicillin-info-btn a {
+    display: block;
+    text-decoration: none;
+    line-height: 30px;
+    margin-right: 280px;
+    height: 30px;
+    width: 120px;
+    min-width: 120px;
+    width: 30px;
+    color: #1b1b1b;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    background-color: #ffffff;
+    border: 1.5px solid #395174;
+    border-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.text-container {
+    font-family: Inter, sans-serif;
+    padding: 80px;
+    margin: auto;
+    width: 70%;
+    background-color: white;
+    min-height: calc(100vh - 87px);
 }
 
 /*Scalability to mobile screen*/
