--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -121,7 +121,7 @@ main {
 .antibiotics {
     display: flex;
     flex-direction: column;
-    margin-left: 10%;
+    margin-left: 15%;
     margin-right: 10%;
     max-width: 600px;
     width: 100%;
@@ -358,7 +358,7 @@ aside {
     height: 80px;
     display: flex;
     flex-direction: column;
-    margin-left: 17px;
+    margin-left: 7px;
     margin-top: 15px;
     margin-bottom: 0px;
 }
@@ -631,7 +631,7 @@ aside {
 
 .btn-calculate {
     margin-top: 2px;
-    margin-left: 2.5%;
+    margin-left: 5.5%;
     margin-bottom: 10px;
     width: 147px;
     height: 36px;
@@ -1066,18 +1066,20 @@ aside {
     bottom: 0;
     background-color: rgb(255, 254, 189);
     width: 100%;
-    height: 100%;
-    max-height: 90px;
+    max-height: 500px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 100px;
     justify-content: center;
     align-items: center;
     z-index: 1;
+    padding-left: 100px;
 }
 
 .penicillin-info > p {
-    padding-left: 15%;
+    padding-left: 10px;
     padding-right: 3%;
+    padding-top: 15px;
+    padding-bottom: 15px;
     color: black;
     font-size: 18px;
 }
@@ -1086,7 +1088,7 @@ aside {
     display: block;
     text-decoration: none;
     line-height: 30px;
-    margin-right: 280px;
+    margin-right: 30px;
     height: 30px;
     width: 120px;
     min-width: 120px;
@@ -1110,19 +1112,21 @@ aside {
     min-height: calc(100vh - 87px);
 }
 
+.text-container h2 {
+    padding-bottom: 40px;
+}
+
 /*Scalability to mobile screen*/
 @media only screen and (max-width: 630px) {
     main {
         display: flex;
         flex-direction: column;
         align-items: center;
-    } .header--links {
-        display: none;
     } .antibiotic-instructions{
         margin-left: 15px;
         margin-right: 15px;
         height: 100%;
-    }  .antibiotics {
+    } .antibiotics {
         width: 93%;
         margin-left: 3%;
         margin-right: 3%;
@@ -1325,16 +1329,19 @@ aside {
     } .heart-icon {
         right: 225px;
     } .penicillin-info {
-        max-height: 180px
+        flex-direction: column;
+        font-size: 40px;
+        padding-left: 10px;
+        padding-top: 20px;
     } .penicillin-info > p {
         font-size: 17px;
+    } .penicillin-info-btn {
+        padding-bottom: 30px;
     }
 }
 
 @media only screen and (min-width: 631px) {
-    .mobile-container {
-        display: none;
-    }  .active-class {
+      .active-class {
         margin-left: 25px;
     } .not-active-class {
         margin-left: 25px;
@@ -1356,7 +1363,6 @@ aside {
     } .recipe-container {
         width: 600px;
     } .btn-calculate {
-        margin-left: 0px;
         margin-right: 20px;
     }  .aside-text {
         margin-top: 150px;
@@ -1385,8 +1391,10 @@ aside {
     } 
 }
 
-@media only screen and (max-width: 850px) {
-    .info-links {
+@media only screen and (max-width: 860px) {
+    .header--links {
+        display: none;
+    } .info-links {
         flex-direction: column;
         align-items: flex-start;
         font-family: Arial, Helvetica, sans-serif;
@@ -1409,8 +1417,12 @@ aside {
         font-family: Arial, Helvetica, sans-serif;
     } .loading {
         top: 400px;
-    } .penicillin-info {
-        max-height: 180px;
+    } 
+}
+
+@media only screen and (min-width: 861px) {
+    .mobile-container {
+        display: none;
     }
 }
 
@@ -1419,10 +1431,7 @@ aside {
         background-color: white;
     } .info-container {
         width: 100%;
-    } .penicillin-info > p {
-        padding-left: 5%;
-        padding-right: 5%;
-    }
+    } 
 }
 
 @media only screen and (min-width: 1400px) {
@@ -1440,7 +1449,7 @@ aside {
         grid-column-start: 2;
         grid-row-start: 1;
     } .antibiotics {
-        max-width: 700px;
+        max-width: 650px;
     }  .treatment-container {
         width: 100%;
     } .info-container {
@@ -1464,6 +1473,13 @@ aside {
     } .loading {
         top: 400px;
         left: 340px;
+    } .penicillin-info > p {
+        padding-left: 10px;
+        padding-right: 5%;
+    } .penicillin-info-btn a {
+        margin-right: 280px;
+    } .penicillin-info {
+        padding-left: 300px;
     }
     
 }
