--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -17,11 +17,6 @@ button, a, li, input {
     cursor: pointer;
 }
 
-#root > div > div > h3 {
-    margin-bottom: 20px;
-}
-
-
 .header {
     font-family: Inter, sans-serif;
     display: flex;
@@ -107,9 +102,9 @@ main {
     min-height: calc(100vh - 87px);
     position: relative;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2.7fr 1fr;
     margin: 0 auto;
-    max-width: 800px;
+    /*max-width: 800px;*/
 }
 
 .main-centered {
@@ -126,8 +121,8 @@ main {
 .antibiotics {
     display: flex;
     flex-direction: column;
-    margin-left: 15%;
-    margin-right: 10%;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 600px;
     width: 100%;
 }
@@ -181,6 +176,7 @@ aside {
     align-items: center;
     font-weight: 400;
     font-size: 14px;
+    max-width: 500px;
 }
 
 .aside-text {
@@ -894,6 +890,8 @@ aside {
 
 .info-paragraph {
     margin-bottom: 10px;
+    word-spacing: 1px;
+    line-height: 1.3;
 }
 
 .info-bolded-text {
@@ -987,7 +985,7 @@ aside {
     right: 0;
     margin: 0px;
     max-width: 400px;
-    z-index: 10;
+    z-index: 8;
 }
 
 .mobile-nav-links {
@@ -1070,19 +1068,20 @@ aside {
     display: flex;
     left: 0;
     bottom: 0;
-    background-color: rgb(255, 254, 189);
+    background-color: rgb(255, 253, 164);
     width: 100%;
-    max-height: 500px;
+    max-height: 600px;
+    min-height: 150px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100px;
     justify-content: center;
     align-items: center;
     z-index: 1;
-    padding-left: 100px;
+    padding-left: 20vw;
 }
 
 .penicillin-info > p {
-    padding-left: 10px;
+    padding-left: 20px;
     padding-right: 3%;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -1094,11 +1093,10 @@ aside {
     display: block;
     text-decoration: none;
     line-height: 30px;
-    margin-right: 30px;
+    margin-right: 10vw;
     height: 30px;
     width: 120px;
     min-width: 120px;
-    width: 30px;
     color: #1b1b1b;
     text-align: center;
     font-weight: bold;
@@ -1113,7 +1111,7 @@ aside {
     font-family: Inter, sans-serif;
     padding: 80px;
     margin: auto;
-    width: 60%;
+    width: 70%;
     background-color: white;
     min-height: calc(100vh - 87px);
 }
@@ -1125,25 +1123,71 @@ aside {
 .penicillin-info-image {
     width: 100%;
     display: flex;
-    padding-bottom: 40px;
+    cursor: pointer;
 }
 
 .penicillin-info-image2 {
-    width: 90%;
-    height: 80%;
     display: flex;
     justify-content: center;
     padding-bottom: 70px;
-    padding-left: 90px;
+    cursor: pointer;
+    width: 90%;
 }
 
 .penicillin-image-mobile {
     width: 100%;
+    cursor: pointer;
 }
 
 .penicillin-image-mobile2 {
+    cursor: pointer;
     width: 100%;
 }
+
+.penicillin-txt-header {
+    font-size: 24px;
+    padding-bottom: 45px;
+}
+
+.modal-close-btn {
+    width: 100px;
+    position: absolute;
+    bottom: -40px;
+    right: 0;
+    height: 30px;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.modal {
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    max-width: 70%;
+    max-height: 100%;
+    scrollbar-width: none; 
+    -ms-overflow-style: none;  
+}
+
+.modal img {
+    max-width: 65vw;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.modal::-webkit-scrollbar {
+    display: none;
+}
+
+.risk-evaluation-header {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
 
 /*Scalability to mobile screen*/
 @media only screen and (max-width: 630px) {
@@ -1172,6 +1216,7 @@ aside {
         grid-column-start: 1;
         width: 100%;
         overflow-x: hidden;
+        max-width: 100vw;
     } .treatment-header {
         font-size: 14px;
     }  section > h1 {
@@ -1366,10 +1411,23 @@ aside {
         font-size: 17px;
     } .penicillin-info-btn {
         padding-bottom: 30px;
+    } .penicillin-info-btn a {
+        margin-right: 0px;
     } .text-container {
         padding: 0;
     } .text-container h2 {
         padding-top: 40px;
+    }  .modal img {
+        -webkit-overflow-scrolling: touch;
+        z-index: 10;
+    } .modal {
+        position: relative;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch; 
+    } .modal-close-btn {
+        bottom: -125px;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
@@ -1384,6 +1442,7 @@ aside {
         align-items: center;
     } aside {   
         background-color: rgb(255, 255, 255);
+        max-width: 700px;
     } .logo {
         padding-left: 10px;
     } .diagnosis-form {
@@ -1397,6 +1456,7 @@ aside {
         width: 600px;
     } .btn-calculate {
         margin-right: 20px;
+        margin-left: 0;
     }  .aside-text {
         margin-top: 150px;
     } .aside-version-update {
@@ -1457,7 +1517,7 @@ aside {
         padding-left: 0;
     } .text-container h2 {
         padding-top: 10px;
-    }
+    } 
 }
 
 @media only screen and (min-width: 861px) {
@@ -1473,15 +1533,23 @@ aside {
         width: 100%;
     } .text-container {
         width: 100%;
-    }
+    } .modal img {
+        max-width: 95vw;
+        z-index: 10;
+    } .modal {
+        max-width: 100%;
+        max-height: 100vh; 
+        z-index: 10; 
+    } 
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1500px) {
     main {
         display: grid;
         align-items: start;
-        max-width: 1550px; 
+        /*max-width: 1550px; */
         margin-right: 0px;
+        padding-left: 150px;
     } .diagnosis-menu {
         margin-left: 0px;
     } .mobile-container {
@@ -1490,8 +1558,11 @@ aside {
         background-color: #FBFBFB;
         grid-column-start: 2;
         grid-row-start: 1;
+        justify-self: flex-end;
+        max-width: 27vw;
+        min-width: 520px;
     } .antibiotics {
-        max-width: 650px;
+        max-width: 680px;
     }  .treatment-container {
         width: 100%;
     } .info-container {
@@ -1516,12 +1587,13 @@ aside {
         top: 400px;
         left: 340px;
     } .penicillin-info > p {
-        padding-left: 10px;
-        padding-right: 5%;
+        padding-left: 20px;
     } .penicillin-info-btn a {
-        margin-right: 280px;
+        margin-right: 330px;
     } .penicillin-info {
-        padding-left: 300px;
+        height: 150px;
+    } .text-container {
+        width: 60%;
     }
     
 }
