--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -1169,6 +1169,7 @@ aside {
     scrollbar-width: none; 
     -ms-overflow-style: none;
     box-shadow: none;  
+    z-index: 100;
 }
 
 .modal img {
@@ -1419,13 +1420,14 @@ aside {
         padding-top: 40px;
     }  .modal img {
         -webkit-overflow-scrolling: touch;
-        z-index: 10;
-        padding-top: 58px;
     } .modal {
         position: relative;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch; 
-    } 
+        padding-bottom: 150px;
+    } .modal-close-btn {
+        right: 35px;
+    }
 }
 
 @media only screen and (min-width: 631px) {
