--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -134,7 +134,7 @@ section {
 
 section > h1 {
     font-weight: 700;
-    font-size: 32px;
+    font-size: 29px;
     line-height: 39px;
     margin-top: 40px;
     margin-bottom: 34px;
@@ -515,7 +515,7 @@ aside {
     align-self: center;
     font-style: normal;
     font-weight: 900;
-    font-size: 24px;
+    font-size: 23px;
     margin-top: 4px;
 }
 
@@ -575,7 +575,7 @@ aside {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 4px;
+    gap: 8px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -583,8 +583,9 @@ aside {
 .choise {
     width: 100%;
     border-radius: 20px 20px 20px 20px;
-    border: 1.5px solid #395174;
-    padding: 15px;
+    border: 1.5px solid #858585;
+    padding: 17px;
+    box-shadow: 1.5px 1.5px 1.5px 1.5px #c2c2c2;
 }
 
 .choise-header {
@@ -593,6 +594,7 @@ aside {
     justify-content: space-between;
     margin-right: 16px;
     align-items: center;
+    letter-spacing: 0.1px;
 }
 
 .choise-inner {
@@ -682,7 +684,7 @@ aside {
 }
 
 .strepto-info {
-    padding: 7px;
+    padding: 10px;
     padding-left: 20px;
     grid-row-start: 1;
     grid-column-start: 1;
@@ -692,7 +694,7 @@ aside {
     max-width: 410px;
     height: auto;
     background-color: #F2F2F2;
-    color: #395174;
+    color: #304769;
     gap: 10px;
     border-radius: 0px 20px 0px 20px;
 }
@@ -768,7 +770,7 @@ aside {
     align-self: flex-start;
     font-family: Inter, sans-serif;
     font-size: 16px;
-    padding: 10px;
+    padding: 12px;
     margin: 0;
     margin-left: 8px;
     margin-bottom: 20px;
@@ -1077,7 +1079,7 @@ aside {
     justify-content: center;
     align-items: center;
     z-index: 1;
-    padding-left: 20vw;
+    padding-left: 15vw;
 }
 
 .penicillin-info > p {
@@ -1092,17 +1094,17 @@ aside {
 .penicillin-info-btn a {
     display: block;
     text-decoration: none;
-    line-height: 30px;
+    line-height: 40px;
     margin-right: 10vw;
-    height: 30px;
-    width: 120px;
+    height: 40px;
+    width: 150px;
     min-width: 120px;
-    color: #1b1b1b;
+    color: #1f1f1f;
     text-align: center;
     font-weight: bold;
     font-size: 18px;
     background-color: #ffffff;
-    border: 1.5px solid #395174;
+    border: 1.5px solid rgb(202, 202, 202);
     border-radius: 5px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -1150,15 +1152,16 @@ aside {
 }
 
 .modal-close-btn {
-    width: 110px;
+    width: 130px;
     position: fixed;
     right: 0;
-    height: 35px;
+    height: 37px;
     font-size: 18px;
     font-weight: bold;
     justify-self: flex-end;
     background-color: #f3f3f3;
-    border: 1.5px solid #000000;
+    border: 1.5px solid rgb(202, 202, 202);
+    color:#1f1f1f;
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }    
@@ -1409,10 +1412,7 @@ aside {
     } .heart-icon {
         right: 225px;
     } .penicillin-info {
-        flex-direction: column;
         font-size: 40px;
-        padding-left: 10px;
-        padding-top: 20px;
     } .penicillin-info > p {
         font-size: 17px;
     } .penicillin-info-btn {
@@ -1523,7 +1523,13 @@ aside {
         padding-left: 0;
     } .text-container h2 {
         padding-top: 10px;
-    } 
+    } .penicillin-info {
+        flex-direction: column;
+        padding: 20px;
+        font-size: 44px;
+    } .penicillin-info-btn a {
+        margin-right: 0;
+    }
 }
 
 @media only screen and (min-width: 861px) {
@@ -1595,7 +1601,7 @@ aside {
     } .penicillin-info > p {
         padding-left: 20px;
     } .penicillin-info-btn a {
-        margin-right: 330px;
+        margin-right: 15vw;
     } .penicillin-info {
         height: 150px;
     } .text-container {
