--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -183,14 +183,15 @@ aside {
     width: 80%;
     margin-top: 86px;
     font-size: 16px;
+    margin-bottom: 120px;
 }
 
 .aside-update {
     width: 80%;
     text-align: start;
-    margin-top: 120px;
     color: black;
     font-size: 16px;
+    margin-top: 4px;
 }
 
 .aside-version-update {
@@ -1389,8 +1390,8 @@ aside {
         align-self: flex-end;
         margin-bottom: 15px;
         margin-right: 15px;
-    } .aside-update {
-        margin-top: 70px;
+    } .aside-text{
+        margin-bottom: 70px;
     } .aside-version-update {
         margin-bottom: 30px;
     } .aside-text {
